flightassist.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: weather-service
spec:
  replicas: 1
  template:
    metadata:
      name: weather-service
      labels:
        run: weather-service
    spec:
      containers:
        - name: weather-service
          image: "registry.ng.bluemix.net/<namespace>/weather-service"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /run/secrets/service-bind
              name: weather-service-bind-volume
      volumes:
        - name: weather-service-bind-volume
          secret:
            defaultMode: 420
            #if your weather service name is not `myweatherinsights`, replace `myweatherinsights` to your weather service name here
            secretName: binding-myweatherinsights
---
apiVersion: v1
kind: Service
metadata:
  name: weather-service
  labels:
    run: weather-service
spec:
  type: NodePort
  selector:
    run: weather-service
  ports:
   - protocol: TCP
     port: 5000
     nodePort: 30081
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flightassist-service
spec:
  replicas: 1
  template:
    metadata:
      name: flightassist-service
      labels:
        run: flightassist-service
    spec:
      containers:
        - name: flightassist-service
          #change <namespace> to your namespace, obtain your name space via `bx cr namespaces`
          image: "registry.ng.bluemix.net/<namespace>/flightassist"
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /opt/service-bind
              name: service-bind-volume2
            - mountPath: /run/secrets
              name: mysecret-volume
      volumes:
        - name: service-bind-volume2
          secret:
            defaultMode: 420
            #if your cloudant service name is not `mycloudant`,replace `mycloudant` to your cloudant service name here
            secretName: binding-mycloudant
        - name: mysecret-volume
          secret:
            defaultMode: 420
            secretName: mysecret
---
apiVersion: v1
kind: Service
metadata:
  name: flightassist-service
  labels:
    run: flightassist-service
spec:
  type: NodePort
  selector:
    run: flightassist-service
  ports:
   - protocol: TCP
     port: 3000
     nodePort: 30080
