flightassist_serverless.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: flightassist-service
spec:
  replicas: 1
  template:
    metadata:
      name: flightassist-service
      labels:
        run: flightassist-service
    spec:
      containers:
        - name: flightassist-service
          #change <namespace> to your namespace, obtain your name space via `bx cr namespaces`
          image: registry.ng.bluemix.net/<namespace>/flightassist:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - mountPath: /opt/service-bind
              name: service-bind-volume2
            - mountPath: /run/secrets
              name: mysecret-volume
            - mountPath: /opt/service-bind2
              name: weather-service-bind-volume
      volumes:
        - name: service-bind-volume2
          secret:
            defaultMode: 420
            secretName: binding-mycloudant
        - name: weather-service-bind-volume
          secret:
            defaultMode: 420
            secretName: binding-myweatherinsights
        - name: mysecret-volume
          secret:
            defaultMode: 420
            secretName: mysecret
---
apiVersion: v1
kind: Service
metadata:
  name: flightassist-service
  labels:
    run: flightassist-service
spec:
  type: NodePort
  selector:
    run: flightassist-service
  ports:
   - protocol: TCP
     port: 3000
     nodePort: 30080
